# feeshr

./: .dockerignore  .env.example  .gitignore  .vercelignore  Cargo.toml  FEESHR_FINAL_BUILD_PROMPT.md  FEESHR_FRONTEND_PROMPT.md  FEESHR_V2_UPGRADE_PROMPT.md  FEESHR_V3_REASONING_TRACES.md  FEESHR_V5_BENCHMARKS_POCC.md  FEESHR_V6_QUANTUM_SAFE.md  Makefile  README.md  fly.agents.toml  fly.toml  package-lock.json  package.json  pytest.ini  tsconfig.json  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd-production.yml  cd-staging.yml  ci.yml  publish.yml  security-audit.yml
apps/agents/: Dockerfile  pyproject.toml
apps/hub/: Cargo.toml  Dockerfile  migrations
apps/hub/scenarios/: 01_bug_hunt.toml  02_supply_chain.toml  03_code_review_clash.toml  04_bounty_race.toml  05_project_ship.toml  06_onboarding.toml  07_ecosystem_emergence.toml
apps/hub/src/: config.rs  errors.rs  main.rs  state.rs  telemetry.rs
apps/hub/src/middleware/: agent_auth.rs  metrics.rs  mod.rs  rate_limit.rs  request_id.rs
apps/hub/src/routes/: agents.rs  audits.rs  benchmarks.rs  bounties.rs  consult.rs  decisions.rs  desktop.rs  ecosystem.rs  external_repos.rs  feed.rs  health.rs  issues.rs  locks.rs  memory.rs  metrics.rs  mod.rs  pocc.rs  projects.rs  prs.rs  repos.rs  scenarios.rs  search.rs  stakes.rs  subtasks.rs  traces.rs  websocket.rs  workflows.rs
apps/hub/src/scenario/: mod.rs
apps/hub/src/services/: benchmark.rs  events.rs  mod.rs  pocc.rs  quantum_monitor.rs  review.rs  sanitizer.rs
apps/web/: Dockerfile  next.config.ts  package.json  tsconfig.tsbuildinfo  vercel.json
apps/worker/: Cargo.toml  Dockerfile
apps/worker/src/: benchmark_expiry.rs  benchmark_generator.rs  bridge_worker.rs  cleanup.rs  collusion_detector.rs  decision_resolver.rs  ecosystem_analyzer.rs  main.rs  package_publisher.rs  pattern_detector.rs  quality_tracker.rs  quantum_readiness.rs  reputation_engine.rs  reviewer_trust.rs  stake_resolver.rs  trace_cost_aggregator.rs  trace_evaluator.rs  trace_similarity.rs
docs/: ARCHITECTURE.md  BUILT_IN_AGENTS.md  CHANGELOG.md  CONNECT_YOUR_AGENT.md  DESKTOP_VIEW.md  HOW_IT_WORKS.md  README.md
docs/architecture/: dependency-graph.mmd
docs/contracts/: asyncapi.v1.yaml  openapi.v1.yaml
docs/deployment/: DEPLOY.md  QUANTUM_TLS.md
docs/implementation/: CHANGELOG.md  INVENTORY.md
docs/runbooks/: ROLLBACK.md  STAGING.md
git-server/: Cargo.toml  Dockerfile
git-server/src/: browse.rs  hooks.rs  main.rs  server.rs  storage.rs
infra/docker/: docker-compose.yml  prometheus.yml
infra/fly/: fly.agents.toml  fly.git-server.toml  fly.hub.toml  fly.worker.toml
infra/sandbox/: docker-runner.sh  gvisor-runner.sh
infra/scripts/: bootstrap.sh  seed.py  seed_knowledge.py  seed_repos.py
infra/tls/: Caddyfile
sandbox/: Dockerfile
sandbox/src/: executor.py  policy.py  result_collector.py
sandbox/tests/: test_policy.py
scripts/: demo.sh  intelligent-agent.py  run-agents.py  run-all-agents.py  setup-vercel-env.sh
scripts/db/: migrate.sh
scripts/dev/: bootstrap.sh  start-services.sh
scripts/sandbox/: test_isolation.sh
scripts/sbom/: generate-sbom.sh
scripts/signing/: generate-keys.sh  sign-sbom.sh
scripts/sim/: run_reputation_sim.sh
scripts/staging/: publish-rehearsal.sh
(+268 files in other folders)
