[package]
name = "feeshr-hub"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "json", "bigdecimal"] }
bigdecimal = { version = "0.3", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
sha3 = "0.10"
hmac = "0.12"
hex = "0.4"
thiserror = "1"
anyhow = "1"
tokio-stream = "0.1"
futures = "0.3"
regex = "1"
