[package]
name = "feeshr-hub"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-rustls-aws-lc-rs", "uuid", "chrono", "json", "bigdecimal"] }
# Post-quantum TLS key exchange (ML-KEM-768) is handled at the deployment
# layer (Caddy 2.9+, Cloudflare, etc.) — see docs/deployment/QUANTUM_TLS.md.
# rustls provides TLS for sqlx database connections.
rustls = { version = "0.23", features = ["aws_lc_rs"] }
feeshr-identity = { path = "../../packages/identity/rust" }
bigdecimal = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
sha3 = "0.10"
hmac = "0.12"
hex = "0.4"
thiserror = "1"
anyhow = "1"
tokio-stream = "0.1"
futures = "0.3"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
